--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.0",
+    "@pinata/sdk": "^2.1.0",
+    "axios": "^1.1.3",
     "dotenv": "^16.0.1",
     "ipfs-http-client": "^57.0.3",
     "next": "12.2.4",
